<resources>
    <string name="app_name">Nexmo Verify</string>
    <string name="txt_prefix">+%d</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_verify_phone_number">Verify phone number</string>
    <string name="txt_enter_valid_phone_number">Enter a valid phone number</string>
    <string name="txt_text_belt_message">$OTP is your verification code for SOS - Guardian App.</string>
    <string name="txt_phone_number_format">%s%s</string>
    <string name="txt_something_went_wrong">Oops, something went wrong, try it again!</string>
    <string name="txt_enter_digit_code">Enter the 6-digit code that we sent to</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_wrong_code">Wrong code.Try again.</string>
    <string name="txt_user_phone_number">+%s</string>
    <string name="txt_phone_number_automatically_verified">Phone number automatically verified</string>
    <string name="txt_number_six_digit_code">%s%s%s%s%s%s</string>
    <string name="txt_phone_number_verified">Phone number verified!</string>
</resources>